# Scode

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  FINAL_SUMMARY.md  HYBRID_PROMPT.md  LICENSE  PROJECT_SUMMARY.md  PROMPT_UPGRADE.md  README.md  SKILL_INSTALL.md  SKILL_SYSTEM.md  TEST_REPORT.md  UPGRADE_REPORT.md  V0.3.0_RELEASE.md  V0.3.0_SUMMARY.md  V0.4.0_RELEASE.md  V0.4.0_SUMMARY.md  V0.5.0_RELEASE.md  V0.5.1_SUMMARY.md  V0.6.0_SUMMARY.md  build.sh  install.sh  run.sh  test.sh
src/: main.rs
src/agent/: mod.rs  prompts.rs  skills.rs  subagent.rs
src/api/: client.rs  types.rs
src/config/: mod.rs
src/tools/: base.rs  bash.rs  file.rs  filesystem.rs  git.rs  mod.rs  search.rs  web.rs
src/ui/: mod.rs
src/utils/: context.rs  mod.rs  planning.rs  session.rs
