[package]
name = "scode"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A Rust-based AI code agent inspired by Claude Code"

[[bin]]
name = "scode"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
tokio-fs = "0.1"
glob = "0.3"
walkdir = "2.5"

# Process execution
tokio-process = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
toml = "0.8"
dirs = "5.0"

# Streaming
futures = "0.3"
tokio-stream = "0.1"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Progress bar
indicatif = "0.17"

# URL encoding
urlencoding = "2.1"
