[package]
name = "scode"
version = "0.6.1"
edition = "2021"
authors = ["Sumai1"]
description = "Scode - A lightweight Rust AI Code Agent inspired by Claude Code. 22 tools, skill system, and sub-agent support with only 0.7% of Claude Code's codebase."
license = "MIT"
repository = "https://github.com/Sumai1/Scode"
homepage = "https://github.com/Sumai1/Scode"
keywords = ["ai", "agent", "rust", "claude", "coding-assistant"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "scode"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
# tokio::fs is used directly (tokio-fs is deprecated)
glob = "0.3"
walkdir = "2.5"

# Process execution
tokio-process = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
toml = "0.8"
dirs = "5.0"

# Streaming
futures = "0.3"
tokio-stream = "0.1"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Progress bar
indicatif = "0.17"

# URL encoding
urlencoding = "2.1"
